--- a/EasyAuthApi/EasyAuthApi.csproj
+++ b/EasyAuthApi/EasyAuthApi.csproj
@@ -15,7 +15,8 @@
     </ItemGroup>
     
     <ItemGroup>
-      <PackageReference Include="Microsoft.Identity.Web" Version="3.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Logging.AzureAppServices" Version="8.0.13" />
+      <PackageReference Include="Microsoft.Identity.Web" Version="3.7.1" />
     </ItemGroup>
 
 </Project>
